fix : 유저, 프로필 연관관계 재설정

--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -48,11 +48,8 @@
           </svg>
         </div>
 
-        <div id="regionDropdown" class="hidden absolute mt-2 w-48 border border-gray-300 bg-white shadow-lg rounded z-10">
-        </div>
-
-        <div id="subRegionDropdown" class="hidden absolute mt-2 w-48 border border-gray-300 bg-white shadow-lg rounded z-10">
-        </div>
+        <div id="regionDropdown" class="hidden absolute mt-2 w-48 border border-gray-300 bg-white shadow-lg rounded z-10"></div>
+        <div id="subRegionDropdown" class="hidden absolute mt-2 w-48 border border-gray-300 bg-white shadow-lg rounded z-10"></div>
 
       </div>
       <div>
