--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -37,7 +37,7 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     const accessToken = localStorage.getItem('Authorization');
-    fetch('/profiles/nearest', {
+    fetch('/profiles/recommendations', {
       method: 'GET',
       headers: {
         'Authorization': accessToken,
@@ -55,13 +55,10 @@
         profileCard.dataset.profileId = profile.id;
 
         profileCard.innerHTML = `
-          <img src="${profile.photo}" alt="Profile Photo" class="w-full h-64 object-cover">
+          <img src="${profile.image}" alt="Profile Photo" class="w-full h-64 object-cover">
           <div class="p-4">
             <h2 class="text-xl font-semibold">${profile.name}</h2>
-            <p class="text-gray-700">${profile.position}</p>
             <p class="text-gray-600">MBTI: ${profile.mbti}</p>
-            <p class="text-gray-600">Hobby: ${profile.hobby}</p>
-            <p class="text-gray-600">${profile.content}</p>
           </div>
           <div class="absolute top-2 right-2 bg-white p-2 rounded-full shadow">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
