--- a/src/main/resources/templates/userboard.html
+++ b/src/main/resources/templates/userboard.html
@@ -147,6 +147,8 @@
     let isAuthor;
     //TODO : userBoardId
 
+    // board를 조회합니다. -> board의 작성자 ID를 가져와서 -> 작성자 아이이디로 프로필을 조회합니다. -> 조회한값에서 이미지를 가져온다음 -> 사용
+
     document.addEventListener('DOMContentLoaded', function () {
         //TODO: Board 및 해당 User 의 정보를 불러옵니다.
         {
